--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "1.5.0",
     "expo": "~52.0.37",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.477.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "expo-font": "~13.0.4"
+    "react-native-reanimated": "~3.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
+    "react-native-svg-transformer": "^1.5.1",
     "typescript": "^5.3.3"
   },
   "private": true
