--- a/eas.json
+++ b/eas.json
@@ -6,7 +6,7 @@
   "build": {
     "preview": {
       "android": {
-        "buildType": "apk"
+        "distribution": "internal"
       }
     }
   }
